GNOME Bugzilla – Bug 685514
Don't set QT_IM_MODULE nor XMODIFIERS if ibus-daemon is not installed
Last modified: 2012-10-05 13:44:27 UTC
Well, for qt and xim things may not change dynamically, but this is what I think mostly workable for other im. Detected ibus-daemon installed or not here is simple and may not have much side effect for default setup. http://git.gnome.org/browse/gnome-settings-daemon/tree/gnome-settings-daemon/main.c#n240
Created attachment 225876 [details] [review] main: Don't set Input Methods envvar without IBus If IBus isn't installed, don't set the QT_IM_MODULE or XMODIFIERS envvars, as that breaks other Input Methods. As we advice people who don't want to use IBus to just uninstall ibus itself, we should handle being built with IBus support but run-time support not being there.
Review of attachment 225876 [details] [review]: Looks fine.
Attachment 225876 [details] pushed as a4503d3 - main: Don't set Input Methods envvar without IBus