main: Don't set Input Methods envvar without IBus

If IBus isn't installed, don't set the QT_IM_MODULE or XMODIFIERS
envvars, as that breaks other Input Methods.

As we advice people who don't want to use IBus to just uninstall
ibus itself, we should handle being built with IBus support but run-time
support not being there.

https://bugzilla.gnome.org/show_bug.cgi?id=685514